# zaml

./: CONTRIBUTING.md  README.md  dune-project  syntax.txt  test.zml  zaml.opam
.github/workflows/: test.yml
lib/: dune  stdlib.ml  stdlib.zml
src/: dune  main.ml
src/ast/: ast.mli  common.ml  parsed.ml  typed.ml
src/evaluating/: common.ml  dune  env.ml  errors.ml  eval.ml
src/interpreter/: dune  interp.ml
src/parsing/: dune  errors.ml  lexer.mll  parse.ml  parser.mly
src/repl/: cli.ml  dune
src/typing/: common.ml  dune  env.ml  errors.ml  typecheck.ml  unify.ml
test/: dune  tests.ml
test/eval_test/: dune  eval_test.ml
test/parsing_test/: dune  parsing_test.ml
test/typing_test/: dune  typing_test.ml
